k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: mahtovivek741/multi-worker:v3
          # Since this pod has to connect with the redis pod, we have to setup the environment variables
          # which will be set when the containers are created. These environment variables will be used to connect/authenticate other pods
